--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages. I should probably add more than just boilerplate here.</p>
+    <p>New commit after making the repo public. Lets hope this allows it to publish.</p>
 </body>
 </html>
