--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages. I should probably add more than just boilerplate here.</p>
-    <p>New commit after making the repo public. Lets hope this allows it to publish.</p>
-</body>
+    <head>
+        <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik:400,500,700&display=swap" rel="stylesheet"> 
+
+        <script src="https://d3js.org/d3.v5.min.js"></script>
+        <!-- <script src="https://d3js.org/d3.v5.js"></script> -->
+
+        <link rel="stylesheet" type="text/css" href="css/base.css">
+    </head>
+    <body>
+        <h1>Mehul demos stuff that he's learnt</h1>
+        <p>(But only if he remembers to update the github pages repo)</p>
+        <h2>
+            Table of contents
+        </h2>
+        <ol>
+            <li>
+                <span>D3.js</span>
+                <ol>
+                    <li><a href="./mtcars.html">Playing around with the MT Cars dataset</a></li>
+                </ol>
+            </li>
+        </ol>
+    </body>
 </html>
