--- a/mtcars.html
+++ b/mtcars.html
@@ -5,7 +5,6 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik:400,500,700&display=swap" rel="stylesheet"> 
 
         <script src="https://d3js.org/d3.v5.min.js"></script>
-        <!-- <script src="https://d3js.org/d3.v5.js"></script> -->
 
         <link rel="stylesheet" type="text/css" href="css/base.css">
         <script type="text/javascript" src="js/mtcars.js"></script>
@@ -30,7 +29,7 @@
 
             <div class="content_section" id='raw_data'>
                 <h2>2d scatter plot of some attributes of interest</h2>
-                <div id='scatterplot'></div>
+                <div id='scatterplot'>TODO</div>
             </div>
         </div>
     </body>
