--- a/mtcars.html
+++ b/mtcars.html
@@ -14,6 +14,8 @@
         <div id=main_content>
             <h1>Playing around with the MT Cars dataset</h1>
 
+            <div id='debug'></div>
+
             <div class="content_section">            
                 <h2>Data Source</h2>
                 <ul>
@@ -22,15 +24,16 @@
                 </ul>
             </div>
 
-            <div class="content_section" id='raw_data'>
+            <div class="content_section">
+                <h2>2d scatter plot of mpg vs hp</h2>
+            <div id='scatterplot'>[Loading scatter plot element...]</div>
+            </div>
+
+            <div class="content_section">
                 <h2>Raw data in tabular format</h2>
                 <div id='raw_data_table'></div>
             </div>
 
-            <div class="content_section" id='raw_data'>
-                <h2>2d scatter plot of some attributes of interest</h2>
-                <div id='scatterplot'>TODO</div>
-            </div>
         </div>
     </body>
 </html>
