--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Showcase</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik:400,500,700&display=swap" rel="stylesheet"> 
 
         <script src="https://d3js.org/d3.v5.min.js"></script>
-        <!-- <script src="https://d3js.org/d3.v5.js"></script> -->
 
-        <link rel="stylesheet" type="text/css" href="css/base.css">
+        <link rel="stylesheet" type="text/css" href="/css/base.css">
     </head>
     <body>
         <h1>Mehul demos stuff that he's learnt</h1>
@@ -18,7 +18,19 @@
             <li>
                 <span>D3.js</span>
                 <ol>
-                    <li><a href="./mtcars.html">Playing around with the MT Cars dataset</a></li>
+                    <li><a href="/html/mtcars.html">Playing around with the MT Cars dataset</a></li>
+                    <li>
+                        <span>Playing around with the Zomato Bangalore Restaurants Dataset</span>
+                        <ol>
+                            <li><a href="/html/zomato/overview.html">Local Overview of the dataset</a></li>
+                        </ol>
+                    </li>
+                </ol>
+            </li>
+            <li>
+                <span>Comparison of debt payoff methods</span>
+                <ol>
+                    <li><a href="/html/debt-payoff-comparison.html">Simple simulation with static parameters</a></li>
                 </ol>
             </li>
         </ol>
